More stuff
- Added Rejoin Cooldown Display
- Added EntityRenderEvent and modified ArmorStandOptimizer to use it
- Use JDK Map.copyOf instead of ImmutableMap from Guava
 JDK classes often use tricks such as the JDK internal Stable annotation to get more JIT optimizations.
 Guava is also mostly from Java 6 days and its code did not change much, so overall JDK should be more performant.
- For the same reason above, use List.copyOf instead of ImmutableList
 This requires replacing forEach with manual indexed loop to get the same performance when iterating. Avoids lambdas so slightly more performant I guess.
 On streams, we can use .toList() instead of .collect(), which should be faster.
 The only downside is creation of the new ArrayList<>(listeners) and adding the new listener before doing List.copyOf, but that's negligible and our hot path isn't add/removeListener - but rather triggerEvent.
- Replaced the use of ArrayDeque with manual impl to avoid boxing long at TreeGiftsPerHour
- Declare variables seperately in ArmorStandOptimizer
- Added LocationUtils.isInSkyblock()
- Added RenderUtils.MIDDLE_ALIGNED_X
- Use record component extraction pattern directly at SimpleStyle
 Probably syntatic sugar and not more performant but better code maintainability wise anyways.